commit on 'main'

--- a/index.html
+++ b/index.html
@@ -44,8 +44,13 @@
     </nav>
     <!-- End navigation bar -->
      
+
+
     <!-- Jumbotron -->
-    <div class="jumbotron profileBackground">
+    <div class = "profileBackground">
+    <div class="jumbotron">
+        <!-- Image for smaller Screens -->
+        <img src="images/about me photo.jpeg" class="smallMePhoto">
       <div class="jumboCopy">
         <h1 class="display-4">Jonathan Irizarry</h1>
         <h2 class="subCategories"> IT Consultant</h2>
@@ -58,6 +63,7 @@
         <a class="btn btn-primary btn-lg btn-about" href="#" role="button">Learn more about me</a>
       </div>
     </div>
+  </div>
     <!-- End jumbotron -->
 
 
